--- a/index.html
+++ b/index.html
@@ -8,25 +8,28 @@
     <title>Definitions</title>
   </head>
   <body>
-    <ul>
-      <li>JavaScript (JS)</li>
-      <li>Operators</li>
-      <li>Variables</li>
-      <li>Variable naming conventions</li>
-      <li>Functions</li>
-      <li>Methods</li>
-      <li>Arguments</li>
-      <li>Parameters</li>
-      <li>Return</li>
-      <li>Chaining methods</li>
-      <li>Strings</li>
-      <li>Booleans</li>
-      <li>Undefined</li>
-      <li>NaN</li>
-      <li>Escape</li>
-      <li>Alert</li>
-      <li>Comments</li>
-      <li>jQuery</li>
-      <li>Attributes</li>
-    </ul>
+    <div class="container">
+        <ul>
+          <li>JavaScript (JS)</li>
+            <p class="definition">definition</p>
+          <li>Operators</li>
+          <li>Variables</li>
+          <li>Variable naming conventions</li>
+          <li>Functions</li>
+          <li>Methods</li>
+          <li>Arguments</li>
+          <li>Parameters</li>
+          <li>Return</li>
+          <li>Chaining methods</li>
+          <li>Strings</li>
+          <li>Booleans</li>
+          <li>Undefined</li>
+          <li>NaN</li>
+          <li>Escape</li>
+          <li>Alert</li>
+          <li>Comments</li>
+          <li>jQuery</li>
+          <li>Attributes</li>
+        </ul>
+    </div>
   </body>
