finish drop downs

--- a/index.html
+++ b/index.html
@@ -8,28 +8,47 @@
     <title>Definitions</title>
   </head>
   <body>
-    <div class="container">
+
+    <h1>Definitions of jQuery Terminology</h1>
+
         <ul>
           <li>JavaScript (JS)</li>
             <p class="definition">definition</p>
           <li>Operators</li>
+            <p class="definition">definition</p>
           <li>Variables</li>
+            <p class="definition">definition</p>
           <li>Variable naming conventions</li>
+            <p class="definition">definition</p>
           <li>Functions</li>
+            <p class="definition">definition</p>
           <li>Methods</li>
+            <p class="definition">definition</p>
           <li>Arguments</li>
+            <p class="definition">definition</p>
           <li>Parameters</li>
+            <p class="definition">definition</p>
           <li>Return</li>
+            <p class="definition">definition</p>
           <li>Chaining methods</li>
+            <p class="definition">definition</p>
           <li>Strings</li>
+            <p class="definition">definition</p>
           <li>Booleans</li>
+            <p class="definition">definition</p>
           <li>Undefined</li>
+            <p class="definition">definition</p>
           <li>NaN</li>
+            <p class="definition">definition</p>
           <li>Escape</li>
+            <p class="definition">definition</p>
           <li>Alert</li>
+            <p class="definition">definition</p>
           <li>Comments</li>
+            <p class="definition">definition</p>
           <li>jQuery</li>
+            <p class="definition">definition</p>
           <li>Attributes</li>
+            <p class="definition">definition</p>
         </ul>
-    </div>
   </body>
